<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">  
  <modelVersion>4.0.0</modelVersion>  
  <parent> 
    <groupId>org.springframework.boot</groupId>  
    <artifactId>spring-boot-starter-parent</artifactId>  
    <version>3.1.2</version>
    <relativePath/>
  </parent>
  <groupId>ecommerce.web.app</groupId>  
  <artifactId>web-ecommerce</artifactId>
  <version>0.0.1-SNAPSHOT</version>  
  <packaging>pom</packaging>
  <name>Ecommerce</name>
  <description>Ecommerce application</description>

  <modules>
    <module>server</module>
    <module>persistence</module>
    <module>client</module>
  </modules>

  <properties>
    <java.version>17</java.version>
    <kotlin.version>1.6.10</kotlin.version> 
  </properties>

  <dependencies>
    <dependency> 
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-data-jpa</artifactId>  
      <version>3.1.2</version>
    </dependency>

    <dependency> 
      <groupId>com.paypal.sdk</groupId>  
      <artifactId>rest-api-sdk</artifactId>  
      <version>1.14.0</version>
    </dependency>  
    <dependency> 
      <groupId>org.mockito</groupId>  
      <artifactId>mockito-core</artifactId>  
      <version>5.2.0</version>
    </dependency>
    <dependency> 
      <groupId>org.passay</groupId>  
      <artifactId>passay</artifactId>  
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <version>3.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
      <version>3.1.2</version>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>  
      <artifactId>validation-api</artifactId>  
      <version>2.0.1.Final</version> 
    </dependency>  
    <dependency> 
      <groupId>org.jetbrains</groupId>  
      <artifactId>annotations</artifactId>  
      <version>24.0.1</version>
      <scope>compile</scope> 
    </dependency>  
    <dependency> 
      <groupId>org.projectlombok</groupId>  
      <artifactId>lombok</artifactId>  
      <version>1.18.26</version>
      <optional>true</optional> 
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-test</artifactId>  
      <scope>test</scope> 
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>0.11.5</version>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-jackson</artifactId>
      <version>0.11.5</version>
    </dependency>
    <dependency>
      <groupId>com.stripe</groupId>  
      <artifactId>stripe-java</artifactId>  
      <version>4.2.0</version> 
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>  
      <artifactId>spring-boot-starter-validation</artifactId>  
      <version>3.0.4</version>
    </dependency>  
    <dependency> 
      <groupId>io.jsonwebtoken</groupId>  
      <artifactId>jjwt</artifactId>  
      <version>0.9.1</version> 
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>8.2.0</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>4.0.1</version>
    </dependency>
    <dependency> 
      <groupId>org.jetbrains.kotlin</groupId>  
      <artifactId>kotlin-stdlib-jdk8</artifactId>  
      <version>${kotlin.version}</version> 
    </dependency>  
    <dependency> 
      <groupId>org.jetbrains.kotlin</groupId>  
      <artifactId>kotlin-test</artifactId>  
      <version>${kotlin.version}</version>  
      <scope>test</scope> 
    </dependency> 
  </dependencies>  
  <build> 
    <plugins> 
      <plugin> 
        <groupId>org.apache.maven.plugins</groupId>  
        <artifactId>maven-surefire-plugin</artifactId>  
        <version>2.19.1</version> 
      </plugin>  
      <plugin> 
        <groupId>org.springframework.boot</groupId>  
        <artifactId>spring-boot-maven-plugin</artifactId>  
        <version>2.6.4</version>  
        <configuration> 
          <excludes> 
            <exclude> 
              <groupId>org.projectlombok</groupId>  
              <artifactId>lombok</artifactId> 
            </exclude>
          </excludes> 
        </configuration> 
      </plugin>  
      <plugin> 
        <groupId>org.jetbrains.kotlin</groupId>  
        <artifactId>kotlin-maven-plugin</artifactId>  
        <version>${kotlin.version}</version>  
        <executions> 
          <execution> 
            <id>compile</id>  
            <phase>compile</phase>  
            <goals> 
              <goal>compile</goal> 
            </goals> 
          </execution>  
          <execution> 
            <id>test-compile</id>  
            <phase>test-compile</phase>  
            <goals> 
              <goal>test-compile</goal> 
            </goals> 
          </execution> 
        </executions>  
        <configuration> 
          <jvmTarget>1.8</jvmTarget> 
        </configuration> 
      </plugin>  
      <plugin> 
        <groupId>org.apache.maven.plugins</groupId>  
        <artifactId>maven-compiler-plugin</artifactId>  
        <version>3.6.2</version>  
        <executions> 
          <execution> 
            <id>compile</id>  
            <phase>compile</phase>  
            <goals> 
              <goal>compile</goal> 
            </goals> 
          </execution>  
          <execution> 
            <id>testCompile</id>  
            <phase>test-compile</phase>  
            <goals> 
              <goal>testCompile</goal> 
            </goals> 
          </execution> 
        </executions> 
      </plugin>  
      <plugin>
        <groupId>com.microsoft.azure</groupId>
        <artifactId>azure-webapp-maven-plugin</artifactId>
        <version>2.3.0</version>
        <configuration>
          <schemaVersion>v2</schemaVersion>
          <subscriptionId>2fd54e1e-b497-40f3-b962-a322deaff1b2</subscriptionId>
          <resourceGroup>Ecommerce-1646746029092-rg</resourceGroup>
          <appName>Ecommerce-1646746029092</appName>
          <pricingTier>P1v2</pricingTier>
          <region>centralus</region>
          <runtime>
            <os>Windows</os>
            <javaVersion>Java 8</javaVersion>
            <webContainer>Tomcat 9.0</webContainer>
          </runtime>
          <deployment>
            <resources>
              <resource>
                <directory>${project.basedir}/target</directory>
                <includes>
                  <include>*.jar</include>
                </includes>
              </resource>
            </resources>
          </deployment>
        </configuration>
      </plugin>
    </plugins> 
  </build>  
  <pluginRepositories> 
    <pluginRepository> 
      <id>spring-snapshots</id>  
      <url>https://repo.spring.io/snapshot</url> 
    </pluginRepository>  
    <pluginRepository> 
      <id>spring-milestones</id>  
      <url>https://repo.spring.io/milestone</url> 
    </pluginRepository> 
  </pluginRepositories> 
</project>
